@@ -1,3 +1,4 @@
+1/24/12 Simsharing: #3224, turn off specific MongoDB loggers
 1/24/12 Simsharing: removed logManager reset call, resolves #3224
 1/23/12 Simsharing: add convenience constructors for creating IUserComponent from Object and Class
 1/19/12 Simsharing: Send "enabled" flag from SimSharingIcon.  Send events from mouse presses on disabled swing components. See #3218
